different ways to view the progress

--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -146,6 +146,8 @@ body.query-generator-layout {
     .progress {
       float: left;
       width: 70%;
+      max-height: 250px;
+      overflow: auto;
     }
 
   }
