--- a/app/views/query_generator/generated_queries/wizard.html.haml
+++ b/app/views/query_generator/generated_queries/wizard.html.haml
@@ -11,5 +11,6 @@
 :javascript
   queryGenerator.init();
 
+  queryGenerator.urls.updateProgressView = "#{set_progress_view_query_generator_generated_queries_path}";
   queryGenerator.urls.updateOffset = "#{set_model_offset_query_generator_generated_queries_path}";
   #{set_security_token}
