--- a/app/views/query_generator/generated_queries/_progress.html.haml
+++ b/app/views/query_generator/generated_queries/_progress.html.haml
@@ -1,5 +1,17 @@
 - options ||= {}
 
-%b Progress:
-%pre
-  = pretty_print_generated_query(query_generator_session.generated_query, :multiline => false)
+= link_to_function "Single Line", "queryGenerator.setProgressView('single_line')"
+= link_to_function "Multi Line", "queryGenerator.setProgressView('multi_line')"
+= link_to_function "SQL", "queryGenerator.setProgressView('sql')"
+
+.progress-view.single_line
+  %pre
+    = pretty_print_generated_query(query_generator_session.generated_query, :multiline => false)
+.progress-view.multi_line{:style => "display: none"}
+  %pre
+    = pretty_print_generated_query(query_generator_session.generated_query)
+.progress-view.sql{:style => "display: none"}
+  = query_generator_session.generated_query.sql_lines.join("<br />")
+
+:javascript
+  queryGenerator.setProgressView("#{query_generator_session.progress_view}");
