--- a/app/views/query_generator/generated_queries/wizard.html.haml
+++ b/app/views/query_generator/generated_queries/wizard.html.haml
@@ -6,6 +6,9 @@
   / Content for the model records preview dialog
   #model-records-preview{:style => "display: none"}
 
+  / Content for the modal dialog to edit column conditions
+  #model-column-conditions{:style => "display: none"}
+
   .ajax-indicator{:style => "display: none"} Loading...
 
 :javascript
