--- a/app/views/query_generator/generated_queries/wizard/step_4/_content.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_4/_content.html.haml
@@ -1,4 +1,4 @@
-%table
+%table.columns
   %thead
     %tr
       %th
@@ -13,4 +13,5 @@
     = render_wizard_partial 4, "rows/show"
     = render_wizard_partial 4, "rows/name"
     = render_wizard_partial 4, "rows/order"
+    = render_wizard_partial 4, "rows/conditions"
     = render_wizard_partial 4, "rows/preview"
