--- a/app/views/query_generator/generated_queries/wizard/step_4/rows/_name.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_4/rows/_name.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td.row-header= t("query_generator.wizard.conditions.rows.custom_name")
+  %th.row-header= t("query_generator.wizard.conditions.rows.custom_name")
   - query_generator_session.used_columns.each do |qc|
     %td
       - if qc.output
