--- a/app/views/query_generator/generated_queries/wizard/step_4/rows/_order.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_4/rows/_order.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td.row-header= t("query_generator.wizard.conditions.rows.order")
+  %th.row-header= t("query_generator.wizard.conditions.rows.order")
   - query_generator_session.used_columns.each do |qc|
     %td
       - current_order = qc.order.to_sym rescue nil
