--- a/app/views/query_generator/generated_queries/wizard/step_4/rows/_positions.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_4/rows/_positions.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td.row-header= t("query_generator.wizard.conditions.rows.positions")
+  %th.row-header= t("query_generator.wizard.conditions.rows.positions")
   - query_generator_session.used_columns.each do |qc|
     %td.center
       - unless qc == query_generator_session.used_columns.first
