--- a/app/views/query_generator/generated_queries/wizard/step_4/_content.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_4/_content.html.haml
@@ -13,5 +13,6 @@
     = render_wizard_partial 4, "rows/show"
     = render_wizard_partial 4, "rows/name"
     = render_wizard_partial 4, "rows/order"
+    = render_wizard_partial 4, "rows/group_by"
     = render_wizard_partial 4, "rows/conditions"
     = render_wizard_partial 4, "rows/preview"
