faster column selection

--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -173,6 +173,7 @@
       max-height: 400px;
       background-color: white;
       overflow-y: auto;
+      overflow-x: hidden;
       display: block;
       position: relative;
 
