--- a/app/views/query_generator/generated_queries/wizard/step_2/_model_node.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_2/_model_node.html.haml
@@ -11,5 +11,7 @@
   %tbody
     - dh.graph.associations_for(model).each do |association, target|
       - next unless ccan? :read, target
+      - next if target.to_s == query_generator_session.generated_query.main_model
       - next if query_generator_session.query.association_targets.include?(target.to_s)
+      - next if query_generator_session.query.associations_for(target).values.include?(model.to_s)
       = render :partial => wizard_file(2, "association_row"), :locals => {:model => model, :association => association, :end_point => target}
