--- a/app/views/query_generator/generated_queries/_progress.html.haml
+++ b/app/views/query_generator/generated_queries/_progress.html.haml
@@ -1,4 +1,4 @@
-- if query_generator_session.generated_query.output_columns.size > 0
+- if query_generator_session.query.output_columns.size > 0
   - options ||= {}
 
   = link_to_function "Multi Line", "queryGenerator.setProgressView('multi_line')"
