--- a/app/views/layouts/query_generator.html.haml
+++ b/app/views/layouts/query_generator.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Rails Query Generator Demo Layout
+    %title Rails Query Generator
 
     = stylesheet_link_tag "query_generator/query_generator"
     = stylesheet_link_tag "query_generator/jquery_ui_aristo"
