--- a/app/views/query_generator/generated_queries/wizard/step_1/_content.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_1/_content.html.haml
@@ -1,11 +1,11 @@
 -# Create form to submit the main model. Prevent submitting if no model was chosen yet
 - form_tag set_models_query_generator_generated_queries_path, :onsubmit => %{if (jQuery("input[name=main_model]:checked").size() < 1) return false;},
-                                                  :id => "generated_query_main_model_form" do
+                                                              :id => "generated_query_main_model_form" do
   %table
     %thead
       %tr
         %th
-        %th M
+        %th Base
         %th= t("query_generator.misc.model")
         %th= t("query_generator.misc.associations")
         %th= t("query_generator.misc.actions")
@@ -15,5 +15,13 @@
         %td.center= check_box_tag "models[]", model.to_s, query_generator_session.query.constantized_models.include?(model)
         %td.center= radio_button_tag "main_model", model.to_s, query_generator_session.query.constantized_main_model == model, :id => model_dom_id(model, :prefix => "main")
         %td= label_tag model_dom_id(model, :prefix => "main"), human_model_name(model)
-        %td= dh.graph.models_connected_to(model).map {|m| human_model_name(m) if ccan?(:read, m)}.compact.to_sentence
+        %td= array_preview(dh.graph.models_connected_to(model).map {|m| human_model_name(m) if ccan?(:read, m)}.compact, 5)
         %td= link_to_remote("Preview", :url => preview_model_records_query_generator_generated_queries_path(:model => model.to_s), :method => :get)
+
+/ Content for the model records preview dialog
+#model-records-preview{:style => "display: none"}
+
+:javascript
+  queryGenerator.callbacks.init = function() {
+    queryGenerator.setupPreviewDialog();
+  }
