better wizard navigation, removed ruby code preview

--- a/app/views/query_generator/generated_queries/wizard/step_2/_footer.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_2/_footer.html.haml
@@ -1,5 +1,3 @@
-.buttons
-  = link_to t("query_generator.wizard.associations.button_prev"), query_generator_generated_query_wizard_path(:wizard_step => "main_model")
-  = link_to t("query_generator.wizard.associations.button_next"), query_generator_generated_query_wizard_path(:wizard_step => "columns")
-
+.buttons.large
+  = render :partial => "query_generator/generated_queries/wizard/step_links"
 .clear
