--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -117,7 +117,7 @@
 
 
     #graph {
-      min-height: 650px;
+      min-height: 500px;
     }
   }
 
@@ -132,8 +132,18 @@
     .buttons {
       padding: 10px;
       float: right;
-      width: 25%;
+      width: 27%;
       text-align: right;
+
+      &.large {
+        width: auto;
+      }
+
+      a {
+        &.active {
+          background-color: green;
+        }
+      }
 
       //a {
       //  &:link {
@@ -154,7 +164,12 @@
       float: left;
       width: 70%;
       max-height: 250px;
-      overflow: auto;
+
+      textarea {
+        width: 100%;
+        height: 100px;
+      }
+
     }
 
   }
