--- a/app/views/query_generator/generated_queries/wizard/step_1/_content.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_1/_content.html.haml
@@ -12,8 +12,14 @@
 
     - dh.models.each do |model|
       %tr{:class => cycle("odd", "even")}
-        %td.center= check_box_tag "models[]", model.to_s, query_generator_session.query.constantized_models.include?(model)
-        %td.center= radio_button_tag "main_model", model.to_s, query_generator_session.query.constantized_main_model == model, :id => model_dom_id(model, :prefix => "main")
+        %td.center
+          = check_box_tag "models[]", model.to_s, query_generator_session.query.constantized_models.include?(model),
+                                              :id => model_dom_id(model),
+                                              :class => "model"
+        %td.center
+          = radio_button_tag("main_model", model.to_s, query_generator_session.query.constantized_main_model == model,
+                                                   :id => model_dom_id(model, :prefix => "main"),
+                                                   :onclick => "queryGenerator.selectMainModel()")
         %td= label_tag model_dom_id(model, :prefix => "main"), human_model_name(model)
         %td= array_preview(dh.graph.models_connected_to(model).map {|m| human_model_name(m) if ccan?(:read, m)}.compact, 5)
         %td= link_to_remote("Preview", :url => preview_model_records_query_generator_generated_queries_path(:model => model.to_s), :method => :get)
