--- a/app/views/query_generator/generated_queries/wizard/step_3/_footer.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_3/_footer.html.haml
@@ -1,6 +1,4 @@
-.buttons
-  = link_to t("query_generator.wizard.columns.button_prev"), query_generator_generated_query_wizard_path(:wizard_step => "associations")
-  = link_to t("query_generator.wizard.columns.button_next"), query_generator_generated_query_wizard_path(:wizard_step => "conditions")
+.buttons.large
   = render :partial => "query_generator/generated_queries/wizard/step_links"
 
 .clear
