--- a/app/views/query_generator/generated_queries/wizard/step_3/_model_column_row.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_3/_model_column_row.html.haml
@@ -1,7 +1,7 @@
 - is_active = query_generator_session.query.uses_column?(model, column)
 %tr{:class => (is_active ? "active" : "")}
   %td.center= check_box_tag "column", column_dom_id(model, column), is_active,
-                :onchange => remote_function(:url => toggle_table_column_query_generator_generated_queries_path(:model => model.to_s, :column => column.name),
+                :onchange => remote_function(:url => toggle_table_column_query_generator_generated_queries_path(:model => model.to_s, :column => column.name, :wizard_step => params[:wizard_step]),
                                              :method => :post,
                                              :after => %{jQuery(this).parents("tr").toggleClass("active")})
   %td.icon= column_symbol(model, column)
