--- a/app/views/query_generator/generated_queries/wizard/step_4/_footer.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_4/_footer.html.haml
@@ -1,8 +1,7 @@
 .progress
-  = render_current_progress
+  = render :partial => "generated_sql", :locals => {:generated_query => query_generator_session.query}
 
 .buttons
-  = link_to t("query_generator.wizard.conditions.button_prev"), query_generator_generated_query_wizard_path(:wizard_step => "columns")
-  = link_to t("query_generator.wizard.conditions.button_next"), query_generator_generated_query_wizard_path(:wizard_step => "query")
+  = render :partial => "query_generator/generated_queries/wizard/step_links"
 
 .clear
