--- a/app/views/query_generator/generated_queries/wizard/step_5/_footer.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_5/_footer.html.haml
@@ -1,8 +1,8 @@
 .progress
   = render :partial => "generated_sql", :locals => {:generated_query => query_generator_session.query}
 
-.buttons
-  = link_to t("query_generator.wizard.query.button_prev"), query_generator_generated_query_wizard_path(:wizard_step => "conditions")
+.buttons.large
+  = render :partial => "query_generator/generated_queries/wizard/step_links"
   = link_to_function t("query_generator.wizard.query.button_next"), %{jQuery("#query-generator").find("form").submit()}
 
 .clear
