--- a/app/views/query_generator/generated_queries/wizard/step_2/_footer.html.haml
+++ b/app/views/query_generator/generated_queries/wizard/step_2/_footer.html.haml
@@ -1,3 +1,3 @@
-.buttons.large
+.buttons.large.ui-widget-header.ui-corner-all
   = render :partial => "query_generator/generated_queries/wizard/step_links"
 .clear
