--- a/app/stylesheets/query_generator/query_generator.scss
+++ b/app/stylesheets/query_generator/query_generator.scss
@@ -131,20 +131,11 @@
       step. The "buttons" itself are css-enhanced links.
     */
     .buttons {
+      margin-left: auto;
+      margin-right: auto;
       padding: 10px;
-      float: right;
-      width: 27%;
+      width: auto;
       text-align: right;
-
-      &.large {
-        width: auto;
-      }
-
-      a {
-        &.active {
-          background-color: green;
-        }
-      }
 
       //a {
       //  &:link {
@@ -162,8 +153,7 @@
     }
 
     .progress {
-      float: left;
-      width: 60%;
+      width: 100%;
       max-height: 250px;
 
       textarea {
